# hoddor

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  EMBEDDED_GRAPH_SPEC.md  EXECUTIVE_SUMMARY_GRAPH_LLM.md  RAG_GRAPH_ARCHITECTURE.md  README.md  WEBLLM_IMPLEMENTATION_SPEC.md  package-lock.json  package.json
.github/workflows/: release.yml
hoddor/: CRYPTO_ARCHITECTURE.md  Cargo.toml  DOMAIN_EXTRACTION.md  FEATURES.md  GRAPH_PERSISTENCE.md  INTEROPERABILITY_PLAN.md  INTEROPERABILITY_SPEC.md
hoddor/.cargo/: config.toml
hoddor/.context/: hexagonal-architecture.md
hoddor/src/: console.rs  crypto.rs  errors.rs  file_system.rs  global.rs  lib.rs  lock.rs  measure.rs  notifications.rs  persistence.rs  platform.rs  signaling.rs  sync.rs  vault.rs  webauthn.rs  webrtc.rs
hoddor/src/adapters/: global_clock.rs  global_logger.rs  global_persistence.rs  mod.rs
hoddor/src/adapters/native/: clock.rs  console_logger.rs  fs_storage.rs  locks.rs  mock_prf.rs  mod.rs  notifier.rs  persistence.rs
hoddor/src/adapters/shared/: age_encryption.rs  age_identity.rs  argon2_kdf.rs  mod.rs
hoddor/src/adapters/wasm/: clock.rs  console_logger.rs  cozo_graph.rs  error_conversions.rs  graph_persistence.rs  locks.rs  mod.rs  notifier.rs  opfs_storage.rs  persistence.rs  simple_graph.rs  webauthn_prf.rs
hoddor/src/auth/: crypto.rs  mod.rs  webauthn.rs
hoddor/src/domain/: mod.rs
hoddor/src/domain/authentication/: error.rs  mod.rs  operations.rs  types.rs
hoddor/src/domain/crypto/: error.rs  mod.rs  operations.rs  types.rs
hoddor/src/domain/graph/: error.rs  mod.rs  operations.rs  persistence.rs  types.rs
hoddor/src/domain/vault/: error.rs  expiration.rs  mod.rs  operations.rs  serialization.rs  types.rs  validation.rs
hoddor/src/facades/: mod.rs
hoddor/src/facades/native/: crypto.rs  mod.rs  vault.rs
hoddor/src/facades/wasm/: converters.rs  crypto.rs  graph.rs  legacy.rs  mod.rs  vault.rs
hoddor/src/facades/wasm/webauthn/: crypto_helpers.rs  mod.rs  webauthn.rs
hoddor/src/ports/: clock.rs  crypto.rs  graph.rs  lock.rs  logger.rs  mod.rs  notifier.rs  persistence.rs  storage.rs
hoddor/src/webauthn/: mod.rs  webauthn.rs
hoddor/tests/: benchmark.rs  crypto.rs  password_hashing.rs  storage_migration.rs  test_utils.rs  vault_notifications.rs  vault_operations.rs
playground/: .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
playground/src/: App.tsx  main.old.ts  main.ts  main.tsx  performance.ts  styles.css  vault.ts  wasm.ts  worker.ts
playground/src/components/: LLMChat.tsx  MemoryManager.tsx  RAGWorkspace.tsx  SignalingClient.ts  Vault.tsx  VaultBody.tsx  VaultHeader.tsx  VaultSync.ts  Vaults.tsx  VaultsActions.tsx  VaultsMenu.tsx
playground/src/components/chat/: ChatInput.tsx  ChatMessages.tsx
playground/src/components/memory/: MemoryForm.tsx  MemoryList.tsx
playground/src/components/rag/: GraphAuthModal.tsx  RAGControls.tsx
playground/src/components/vault/: Authentication.tsx  LoggedActions.tsx  Passphrase.tsx  Vault.tsx  VaultBody.tsx  VaultHeader.tsx  VaultHeaderTitle.tsx
playground/src/contexts/: ServicesContext.tsx
playground/src/hooks/: useChatMessages.ts  useGraphAuthentication.ts  useGraphPersistence.ts  useMemories.ts  useServiceInitialization.ts
playground/src/services/: embedding.ts  index.ts  ragOrchestrator.ts  webllm.ts
playground/src/services/embeddings/: embedding_service.ts
playground/src/services/llm/: webllm_service.ts
playground/src/services/rag/: rag_orchestrator.ts
playground/src/store/: app.actions.ts  app.reducer.ts  app.selectors.ts  app.store.ts
playground/src/store/models/: Identity.ts
playground/src/types/: graph.ts
playground/src/utils/: createTestNodes.ts  file.utils.ts  memoryUtils.ts
scripts/: set-version.js
server/: Cargo.toml
signaling_server/: .env.example  Cargo.toml
signaling_server/src/: config.rs  main.rs  messages.rs  security.rs
src/: lib.rs
