[package]
name = "hoddor"
version = "0.1.0"
authors = ["benoit.chassignol <benoit.chassignol@gatewatcher.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = { version = "0.4", features = ["futures-core-03-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
getrandom = { version = "0.2.15", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["FileSystemDirectoryHandle","FileSystemGetDirectoryOptions", "FileSystemFileHandle", "FileSystemGetFileOptions", "FileSystem", "Window", "Navigator", "StorageManager"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
