[package]
name = "hoddor"
version = "1.3.0"
authors = ["Gatewatcher Frontend Team <frontend@gatewatcher.com>"]
description = "Hoddor Browser Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["vault", "graph"]

# Vault: Core functionality - encrypted vaults with namespaces, WebAuthn, etc.
# This is the base feature of Hoddor
vault = ["console_error_panic_hook"]

# Graph: Adds CozoDB graph database with vector search
# Requires vault for persistence and encryption
graph = ["vault", "cozo", "uuid", "rayon"]

[dependencies]
once_cell = "1.20.2"
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }

serde = { version = "1.0.217", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.3"
serde_json = "1.0.137"

# Ensure all getrandom versions in the dependency tree have WASM support enabled by setting feature flags.
getrandom_1 = { package = "getrandom", version = "0.1", features = [
    "wasm-bindgen",
] }
getrandom = { version = "0.2.15", features = ["js", "wasm-bindgen"] }
age = { version = "0.10.1", features = ["armor", "async", "web-sys"] }
rand = "0.8.5"
rand_core = "0.6.4"
argon2 = "0.5.3"
chacha20 = "0.9.1"
bech32 = "0.9"
zeroize = "1.8"

js-sys = "0.3.77"

# --- HMAC + SHA2 for vault integrity ---
hmac = "0.12.1"
sha2 = "0.10.8"

base64 = "0.21.7"
futures-util = "0.3.31"
futures = "0.3.31"
parking_lot = "0.12.3"
hex = "0.4.3"
futures-channel = "0.3.31"
hkdf = "0.12.4"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
async-trait = "0.1.89"

# --- Graph Database (CozoDB) ---
# Note: cozo dependency is target-specific (see bottom of file)
# These dependencies are only needed when "graph" feature is enabled
uuid = { version = "1.11", features = ["v4", "serde", "js"], optional = true }
# Pin rayon to 1.10 to fix compatibility with graph_builder (https://github.com/cozodb/cozo/issues/298)
rayon = { version = "=1.10", optional = true }

[dependencies.web-sys]
version = "0.3.77"
features = [
    "Window",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "console",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "MessageEvent",
    "ErrorEvent",
    "Performance",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "WebSocket",
    "BinaryType",
    "Blob",
    "Navigator",
    "Lock",
    "LockManager",
    "LockOptions",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "FileSystemSyncAccessHandle",
    "WritableStreamDefaultWriter",
    "File",
    "TextDecoder",
    "WorkerGlobalScope",
    "DedicatedWorkerGlobalScope",
    "WorkerNavigator",
    "Storage",
    "FileSystemWritableFileStream",
    "WritableStream",
    "RtcSignalingState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcPeerConnectionState",
    "RtcDataChannelState",
    "RtcIceServer",
    "RtcDataChannelEvent",
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "PublicKeyCredential",
    "PublicKeyCredentialType",
    "PublicKeyCredentialCreationOptions",
    "PublicKeyCredentialUserEntity",
    "PublicKeyCredentialRpEntity",
    "PublicKeyCredentialParameters",
    "PublicKeyCredentialRequestOptions",
    "PublicKeyCredentialDescriptor",
    "AuthenticationExtensionsClientInputs",
    "AuthenticationExtensionsClientOutputs",
    "AuthenticationExtensionsPrfInputs",
    "AuthenticationExtensionsPrfValues",
    "UserVerificationRequirement",
    "AuthenticatorAttachment",
    "AuthenticatorSelectionCriteria",
]

[dependencies.gloo-timers]
version = "0.3.0"
features = ['futures']

# Target-specific dependencies for CozoDB
# Only included when "graph" feature is enabled
# For WASM: use in-memory storage only (no SQLite/RocksDB which don't compile to WASM)
# Note: wasm feature is required for WASM builds
# For native: can use full features with SQLite backend
[target.'cfg(target_arch = "wasm32")'.dependencies]
cozo = { version = "0.7", default-features = false, features = ["wasm"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cozo = { version = "0.7", default-features = false, features = ["compact"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "s"
