[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix-cors = "0.6.5"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
env_logger = "0.10.2"
log = "0.4.22"
futures = "0.3"
parking_lot = "0.12.3"
once_cell = "1.20.2"
dotenv = "0.15.0"
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.10.8"
hmac = "0.12.1"
jwt = "0.16.0"
chrono = "0.4.39"
